--- a/pages/services.html
+++ b/pages/services.html
@@ -10,63 +10,88 @@
 <body>
 
     <nav>
-    <a href="../index.html" class="logo-link">
-        <img src="../images/icon.jpg" alt="Mamacare Hub Logo" class="logo">
+        <a href="../index.html" class="logo-link">
+            <img src="../images/icon.jpg" alt="Mamacare Hub Logo" class="logo">
+        </a>
 
-    <ul class="nav-links" id="navLinks">
-        <li><a href="contact.html">Contact</a></li>
-        <li><a href="FAQ.html">FAQ</a></li>
-        <li class="search-box">
-            <abbr title="Search">
-                <input type="text" placeholder="Search...">
-            </abbr>
-        </li>
-    </ul>
+        <ul class="nav-links" id="navLinks">
+            <li><a href="contact.html">Contact</a></li>
+            <li><a href="FAQ.html">FAQ</a></li>
+            <li class="search-box">
+                <abbr title="Search">
+                    <input type="text" placeholder="Search...">
+                </abbr>
+            </li>
+        </ul>
     </nav>
 
     <section class="services-section">
         <div class="container">
             <div class="section-header">
                 <h1>Our Services ♡</h1>
-                <p>We’re here to support you and your little one every step of the way — before, during, and after your pregnancy.</p>
+                <p style="text-align: center;">We’re here to support you and your little one every step of the way — before, during, and after your pregnancy.</p>
             </div>
 
             <div class="services-grid">
 
                 <div class="service-card">
-                    <div class="icon">Pregnant Woman</div>
-                    <h3>Prenatal Care</h3>
-                    <p>Regular check-ups, ultrasound scans, nutritional guidance, and personalized birth plans for a healthy pregnancy.</p>
+                    <div class="icon">
+                        <img src="../images/pregy.jpg" alt="pregnant woman">
+                    </div>
+                    <div class="service-body">
+                        <h3>Prenatal Care</h3>
+                        <p>Regular check-ups, ultrasound scans, nutritional guidance, and personalized birth plans for a healthy pregnancy.</p>
+                    </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="icon">Baby Bottle</div>
-                    <h3>Labor & Delivery Support</h3>
-                    <p>Experienced midwives and doulas offering natural birth options, pain relief, and emergency care when needed.</p>
+                    <div class="icon">
+                        <img src="../images/babybottle.jpg" alt="baby bottle">
+                    </div>
+                    <div class="service-body">
+                        <h3>Labor & Delivery Support</h3>
+                        <p>Experienced midwives and doulas offering natural birth options, pain relief, and emergency care when needed.</p>
+                    </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="icon">Heart Hands</div>
-                    <h3>Postnatal Care</h3>
-                    <p>Breastfeeding support, newborn care education, postpartum recovery, and mental health check-ins.</p>
+                    <div class="icon">
+                        <img src="../images/hh.jpg" alt="heart hands">
+                    </div>
+                    <div class="service-body">
+                        <h3>Postnatal Care</h3>
+                        <p>Breastfeeding support, newborn care education, postpartum recovery, and mental health check-ins.</p>
+                    </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="icon">Leaf</div>
-                    <h3>Nutrition & Wellness</h3>
-                    <p>Customized meal plans, lactation consulting, and fitness programs safe for pregnancy and postpartum.</p>
+                    <div class="icon">
+                        <img src="../images/leaf.avif" alt="leaf">
+                    </div>
+                    <div class="service-body">
+                        <h3>Nutrition & Wellness</h3>
+                        <p>Customized meal plans, lactation consulting, and gentle fitness programs safe for pregnancy and postpartum.</p>
+                    </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="icon">Brain</div>
-                    <h3>Mental Health Support</h3>
-                    <p>Counseling for postpartum depression, anxiety, parenting stress, and emotional well-being.</p>
+                    <div class="icon">
+                        <img src="../images/brain.webp" alt="brain">
+                    </div>
+                    <div class="service-body">
+                        <h3>Mental Health Support</h3>
+                        <p>Counseling for postpartum depression, anxiety, parenting stress, and emotional well-being.</p>
+                    </div>
                 </div>
 
                 <div class="service-card">
-                    <div class="icon">House</div>
-                    <h3>Home Visits & Teleconsultation</h3>
-                    <p>Convenient in-home care and virtual consultations for busy or recovering mamas.</p>
+                    <div class="icon">
+                        <img src="../images/smiling.png" alt="home visits">
+                    </div>
+                    <div class="service-body">
+                        <h3>Home Visits & Teleconsultation</h3>
+                        <p>Convenient in-home care and virtual consultations for busy or recovering mamas.</p>
+                    </div>
                 </div>
 
             </div>
