final final edit

--- a/index.html
+++ b/index.html
@@ -19,11 +19,7 @@
             <li><a href="pages/services.html">Services</a></li>
             <li><a href="pages/contact.html">Contact</a></li>
             <li><a href="pages/FAQ.html">FAQ</a></li>
-            <li class="search-box">
-            <abbr title="Search">
-                <input type="text" placeholder="Search...">
-            </abbr>
-        </li>
+            
         </ul>
     </nav>
 
@@ -33,6 +29,8 @@
             <div class="hero-text">
                 <h1>Welcome to Mamacare Hub ♡</h1>
                 <p>Your trusted companion for pregnancy information, health tips, and emotional support. We’re here to walk with you every step of the way toward a safe, joyful, and confident journey into motherhood.</p>
+                <br>
+                <br>
                 <a href="pages/services.html" class="btn">Explore Our Services</a>
             </div>
             <div class="hero-image">
@@ -77,13 +75,13 @@
 
     <div class="finalp-home">
         <div class="container">
-            <p>Have a question? We’re only one message away. <a href="pages/contact.html">Say hello →</a></p>
+            <p>Have a question? We’re only one message away. <a href="pages/contact.html" style="text-decoration: none;">Say hello →</a></p>
         </div>
     </div>
 
     <footer>
         <p style="text-align: center;">
-            © 2025 Mamacare Hub ♡ Made with lots of love for every mama-to-be. All rights reserved.
+            © 2025 Mamacare Hub ♡ Made with lots of love for every  beautiful mama-to-be. All rights reserved.
         </p>
     </footer>
 
