edition to the faq page

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
     <div class="finalp-home">
         <div class="container">
-            <p>Have a question? We’re only one message away. <a href="pages/contact.html" style="text-decoration: none;">Say hello →</a></p>
+            <p>Have a question? We’re only one message away. <a href="pages/contact.html" style="text-decoration: none; color: purple;">Say hello →</a></p>
         </div>
     </div>
 
