--- a/pages/FAQ.html
+++ b/pages/FAQ.html
@@ -25,7 +25,7 @@
         </ul>
     </nav>
 
-    <section class="faq-section">
+    <section class="faq-section full-bleed">
         <div class="container">
             <h1>Frequently Asked Questions</h1>
             <p style="text-align: center;">Everything you need to know — answered with love ♡</p>
@@ -66,7 +66,7 @@
 
             </div>
 
-            <p class="finalp">Still have a question? <a href="contact.html">We’re here for you →</a></p>
+            <p class="finalp">Still have a question? <a href="contact.html" style="text-decoration: none; color: purple;">We’re here for you →</a></p>
         </div>
     </section>
 
